--- a/source/index.html
+++ b/source/index.html
@@ -2,20 +2,23 @@
 <html class="page" lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
   <header class="page-header">
-    <a href="index.html" class="page-header__logo">
-      <img class="page-header__logo-image" src="img/header-logo.svg" width="34" height="38"  alt="Логотип сайта.">
-    </a>
-    <a href="index.html" class="page-header__logo">
+    <div class="page-header__logo-container">
+      <a href="index.html" class="page-header__logo">
+        <img class="page-header__logo-image" src="img/header-logo.svg" width="34" height="38"  alt="Логотип сайта.">
+      </a>
+      <a href="index.html" class="page-header__logo">
       <img class="page-header__logo-image" src="img/header-logo2.svg" width="101" height="18"  alt="Логотип сайта.">
-    </a>
+      </a>
+    </div>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">
-        <span class="visualдy-hidden">Открыть меню</span>
+        <span class="visually-hidden">Открыть меню</span>
       </button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
@@ -77,8 +80,8 @@
       </div>
     </section>
     <section class="main-example">
+      <h2 class="main-example__title">Живой пример</h2>
       <div class="main-example__wrapper">
-        <h2 class="main-example__title">Живой пример</h2>
         <p class="main-example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
         <div class="main-example__fieldset-wrapper">
           <fieldset class="main-example__fieldset">
@@ -89,22 +92,25 @@
             <legend class="main-example__legend">затрачено времени</legend>
             <p class="main-example__text">60 дней</p>
           </fieldset>
-        </div>
-        <p class="main-example__expenses">Затраты на питание: 15 000 РУБ.</p>
-        <div class="main-example__range-wrapper">
-          <img src="img/fat-cat-mobile.png" width="280" height="232" alt="фото толстого кота.">
-          <div class="main-example__range-slider">
-            <button class="main-example__button">было</button>
-            <span class="visually-hidden">было</span>
-            <div class="main-example__range-scale">
-              <div class="main-example__range-bar">
-                <button class="main-example__range-button" type="button"></button>
-                <span class="visually-hidden">Изменить состояние</span>
-              </div>
-            </div>
-            <button class="main-example__button">стало</button>
-            <span class="visually-hidden">стало</span>
+          <div class="main-example__expenses-container">
+            <p class="main-example__expenses">Затраты на питание:</p>
+            <p class="main-example__expenses">15 000 РУБ.</p>
           </div>
+        </div>
+      </div>
+      <div class="main-example__range-wrapper">
+        <img class="main-example__range-image" src="img/fat-cat-mobile.png" width="280" height="232" alt="фото толстого кота.">
+        <div class="main-example__range-slider">
+          <button class="main-example__button">было</button>
+          <span class="visually-hidden">было</span>
+          <div class="main-example__range-scale">
+            <div class="main-example__range-bar">
+              <button class="main-example__range-button" type="button"></button>
+              <span class="visually-hidden">Изменить состояние</span>
+            </div>
+          </div>
+          <button class="main-example__button">стало</button>
+          <span class="visually-hidden">стало</span>
         </div>
       </div>
     </section>
