--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
-  <header class="page-header">
+  <header class="page-header page-header--nojs">
     <div class="page-header__logo-container">
       <a href="index.html" class="page-header__logo">
         <img class="page-header__logo-image" src="img/header-logo.svg" width="34" height="38"  alt="Логотип сайта.">
@@ -16,7 +16,7 @@
       <img class="page-header__logo-image" src="img/header-logo2.svg" width="101" height="18"  alt="Логотип сайта.">
       </a>
     </div>
-    <nav class="main-nav">
+    <nav class="main-nav main-nav--opened main-nav--nojs">
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
@@ -48,16 +48,12 @@
       <div class="product-set__wrapper">
         <h2 class="product-set__title">похудение</h2>
         <p class="product-set__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-        <a class="product-set__link" href="#">каталог slim
-          <svg class="link-arrow" width="32" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path class="link-arrow" stroke="#000" stroke-width="2" d="M0 6h18"/><path d="M24 6l-6.75 5.2V.8L24 6z" fill="#000"/></svg>
-        </a>
+        <a class="product-set__link" href="#">каталог slim</a>
       </div>
       <div class="product-set__wrapper">
         <h2 class="product-set__title">Набор массы</h2>
         <p class="product-set__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-        <a class="product-set__link" href="#">каталог pro
-          <svg class="link-arrow" width="32" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path class="link-arrow" stroke="#000" stroke-width="2" d="M0 6h18"/><path d="M24 6l-6.75 5.2V.8L24 6z" fill="#000"/></svg>
-        </a>
+        <a class="product-set__link" href="#">каталог pro</a>
       </div>
     </section>
     <section class="main-descriptions">
@@ -65,15 +61,19 @@
         <h2 class="main-descriptions__title">Как это работает</h2>
         <ul class="main-descriptions__list">
           <li class="main-descriptions__item">
+            <p class="main-descriptions__number">1</p>
             Функциональное питание содержит только полезные питательные вещества.
           </li>
           <li class="main-descriptions__item">
+            <p class="main-descriptions__number">2</p>
             Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
           </li>
           <li class="main-descriptions__item">
+            <p class="main-descriptions__number">3</p>
             Замените один-два приема обычной еды на наше функциональное питание.
           </li>
           <li class="main-descriptions__item">
+            <p class="main-descriptions__number">4</p>
             Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
           </li>
         </ul>
@@ -84,14 +84,14 @@
       <div class="main-example__wrapper">
         <p class="main-example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
         <div class="main-example__fieldset-wrapper">
-          <fieldset class="main-example__fieldset">
+          <div class="main-example__container">
             <legend class="main-example__legend">cнижение веса</legend>
             <p class="main-example__text">5 кг</p>
-          </fieldset>
-          <fieldset class="main-example__fieldset">
+          </div>
+          <div class="main-example__container">
             <legend class="main-example__legend">затрачено времени</legend>
             <p class="main-example__text">60 дней</p>
-          </fieldset>
+          </div>
           <div class="main-example__expenses-container">
             <p class="main-example__expenses">Затраты на питание:</p>
             <p class="main-example__expenses">15 000 РУБ.</p>
@@ -104,10 +104,8 @@
           <button class="main-example__button">было</button>
           <span class="visually-hidden">было</span>
           <div class="main-example__range-scale">
-            <div class="main-example__range-bar">
-              <button class="main-example__range-button" type="button"></button>
-              <span class="visually-hidden">Изменить состояние</span>
-            </div>
+            <button class="main-example__range-button" type="button"></button>
+            <span class="visually-hidden">Изменить состояние</span>
           </div>
           <button class="main-example__button">стало</button>
           <span class="visually-hidden">стало</span>
@@ -133,19 +131,19 @@
         <ul class="social-container__list">
           <li class="social-container__item">
             <a href="#" class="social-container__link">
-              <svg width="28" height="22" fill="none" xmlns="http://www.w3.org/2000/svg"><path class="vk-image" d="M.09 5.49c0-.86.51-1.32 1.54-1.38l3.97.02c.27 0 .44.13.53.38.41 1.26.87 2.34 1.38 3.26.5.9 1.16 1.96 1.98 3.15.07.15.19.23.35.23.12 0 .22-.06.29-.18l.08-.27.03-4.36c0-.3-.08-.5-.23-.6-.15-.1-.43-.17-.84-.22-.32-.06-.48-.24-.48-.56 0-.07.01-.12.03-.15.37-1.09 1.44-1.63 3.2-1.63l1.49-.03c.67 0 1.23.16 1.68.48.44.32.66.82.66 1.5v5.72c.13.08.24.12.35.12.26 0 .5-.15.7-.45 1.94-2.58 3-4.3 3.16-5.18l.05-.13c.13-.25.33-.47.62-.65.28-.19.53-.31.74-.38a.55.55 0 01.24-.05h4.13l.27.03c.35 0 .63.16.83.47.07.1.11.21.14.33a2.42 2.42 0 01.07.56v.17a6.1 6.1 0 01-.95 2.2 23.4 23.4 0 01-1.93 2.53c-.78.9-1.27 1.5-1.46 1.78a.93.93 0 00-.24.56c0 .13.07.28.2.45l3.9 4.63c.21.27.32.56.32.88 0 .38-.16.7-.48.95-.32.25-.7.4-1.15.43l-.45.03h-4.15a.86.86 0 01-.11.02c-.4 0-.76-.16-1.1-.48l-2.5-2.96a1.38 1.38 0 00-.37-.33 38.47 38.47 0 00-.54 2.24l-.08.42a1.4 1.4 0 01-1.11 1.06l-.38.03h-2.6c-1.48 0-2.95-.64-4.42-1.92a19.3 19.3 0 01-3.95-4.94A47.52 47.52 0 01.22 6.22a1.92 1.92 0 01-.13-.73zm16 6.51c-.37 0-.7-.1-1-.29a.9.9 0 01-.46-.79V5.14c0-.34-.09-.58-.26-.72-.18-.14-.5-.21-.94-.21l-1.52.05c-.76 0-1.34.12-1.73.37.78.36 1.18.93 1.18 1.71v4.43a1.5 1.5 0 01-.54 1.04c-.32.28-.67.42-1.06.42-.54 0-.94-.24-1.23-.73a26.16 26.16 0 01-3.09-5.63L5.2 5.2H1.66c-.23 0-.36.01-.39.04-.03.02-.04.1-.04.21 0 .15.02.31.05.48l.56 1.4c1.5 3.64 3.12 6.51 4.87 8.6 1.75 2.1 3.46 3.15 5.15 3.15h2.67c.1 0 .18-.03.24-.09.05-.06.1-.17.13-.34l.05-.25.5-2.21c.15-.3.27-.5.38-.6.2-.19.43-.28.7-.28.42 0 .86.24 1.3.73l2.26 2.71c.15.22.3.33.46.33h4.4c.53 0 .8-.13.8-.38a.47.47 0 00-.09-.25L21.8 13.9c-.3-.35-.45-.73-.45-1.13 0-.4.14-.79.42-1.16.23-.33.68-.9 1.35-1.67a36.7 36.7 0 001.74-2.19c.5-.68.83-1.3.99-1.85l.08-.32a.37.37 0 01-.03-.17c0-.07 0-.14-.02-.19h-4.19c-.26.1-.48.25-.64.46l-.16.47c-.44 1.16-1.6 2.95-3.49 5.36-.37.34-.8.5-1.3.5z" fill="#666"/></svg>
+              <svg width="28" height="22" fill="none" xmlns="http://www.w3.org/2000/svg"><path class="social-container__image" d="M.09 5.49c0-.86.51-1.32 1.54-1.38l3.97.02c.27 0 .44.13.53.38.41 1.26.87 2.34 1.38 3.26.5.9 1.16 1.96 1.98 3.15.07.15.19.23.35.23.12 0 .22-.06.29-.18l.08-.27.03-4.36c0-.3-.08-.5-.23-.6-.15-.1-.43-.17-.84-.22-.32-.06-.48-.24-.48-.56 0-.07.01-.12.03-.15.37-1.09 1.44-1.63 3.2-1.63l1.49-.03c.67 0 1.23.16 1.68.48.44.32.66.82.66 1.5v5.72c.13.08.24.12.35.12.26 0 .5-.15.7-.45 1.94-2.58 3-4.3 3.16-5.18l.05-.13c.13-.25.33-.47.62-.65.28-.19.53-.31.74-.38a.55.55 0 01.24-.05h4.13l.27.03c.35 0 .63.16.83.47.07.1.11.21.14.33a2.42 2.42 0 01.07.56v.17a6.1 6.1 0 01-.95 2.2 23.4 23.4 0 01-1.93 2.53c-.78.9-1.27 1.5-1.46 1.78a.93.93 0 00-.24.56c0 .13.07.28.2.45l3.9 4.63c.21.27.32.56.32.88 0 .38-.16.7-.48.95-.32.25-.7.4-1.15.43l-.45.03h-4.15a.86.86 0 01-.11.02c-.4 0-.76-.16-1.1-.48l-2.5-2.96a1.38 1.38 0 00-.37-.33 38.47 38.47 0 00-.54 2.24l-.08.42a1.4 1.4 0 01-1.11 1.06l-.38.03h-2.6c-1.48 0-2.95-.64-4.42-1.92a19.3 19.3 0 01-3.95-4.94A47.52 47.52 0 01.22 6.22a1.92 1.92 0 01-.13-.73zm16 6.51c-.37 0-.7-.1-1-.29a.9.9 0 01-.46-.79V5.14c0-.34-.09-.58-.26-.72-.18-.14-.5-.21-.94-.21l-1.52.05c-.76 0-1.34.12-1.73.37.78.36 1.18.93 1.18 1.71v4.43a1.5 1.5 0 01-.54 1.04c-.32.28-.67.42-1.06.42-.54 0-.94-.24-1.23-.73a26.16 26.16 0 01-3.09-5.63L5.2 5.2H1.66c-.23 0-.36.01-.39.04-.03.02-.04.1-.04.21 0 .15.02.31.05.48l.56 1.4c1.5 3.64 3.12 6.51 4.87 8.6 1.75 2.1 3.46 3.15 5.15 3.15h2.67c.1 0 .18-.03.24-.09.05-.06.1-.17.13-.34l.05-.25.5-2.21c.15-.3.27-.5.38-.6.2-.19.43-.28.7-.28.42 0 .86.24 1.3.73l2.26 2.71c.15.22.3.33.46.33h4.4c.53 0 .8-.13.8-.38a.47.47 0 00-.09-.25L21.8 13.9c-.3-.35-.45-.73-.45-1.13 0-.4.14-.79.42-1.16.23-.33.68-.9 1.35-1.67a36.7 36.7 0 001.74-2.19c.5-.68.83-1.3.99-1.85l.08-.32a.37.37 0 01-.03-.17c0-.07 0-.14-.02-.19h-4.19c-.26.1-.48.25-.64.46l-.16.47c-.44 1.16-1.6 2.95-3.49 5.36-.37.34-.8.5-1.3.5z" fill="#666"/></svg>
               <span class="visually-hidden">vkontakte</span>
             </a>
           </li>
           <li class="social-container__item">
             <a href="#" class="social-container__link">
-              <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"><path class="youtube-image" d="M9.98.08c1.67 0 3.03.02 4.08.06.9.04 1.7.2 2.4.47a4.98 4.98 0 012.9 2.89c.27.7.43 1.5.46 2.4.04 1.05.06 2.41.06 4.08s-.02 3.03-.06 4.08c-.03.9-.2 1.7-.46 2.4a4.99 4.99 0 01-2.9 2.9c-.7.27-1.5.43-2.4.46-1.05.04-2.41.06-4.08.06s-3.03-.02-4.08-.06a7.5 7.5 0 01-2.4-.46 4.98 4.98 0 01-2.9-2.9 7.5 7.5 0 01-.46-2.4C.1 13.01.08 11.65.08 9.98S.1 6.95.14 5.9c.04-.9.2-1.7.47-2.4A4.98 4.98 0 013.5.6 7.5 7.5 0 015.9.15C6.95.1 8.3.08 9.98.08zm0 1.29c-1.73 0-3.14.02-4.24.06-.7.02-1.35.15-1.95.37a3.59 3.59 0 00-2 1.99c-.21.6-.34 1.25-.36 1.95-.04 1.1-.06 2.5-.06 4.24 0 1.73.02 3.14.06 4.24.02.7.15 1.35.37 1.95.39.94 1.05 1.6 1.99 2 .6.22 1.25.34 1.95.37a157.6 157.6 0 008.48 0c.7-.03 1.35-.15 1.95-.38a3.59 3.59 0 002-1.99c.22-.6.34-1.25.37-1.95a157.6 157.6 0 000-8.48 6.27 6.27 0 00-.38-1.95 3.57 3.57 0 00-1.99-2 6.27 6.27 0 00-1.95-.36c-1.1-.04-2.5-.06-4.24-.06zm0 12.58c1.1 0 2.03-.4 2.8-1.17a3.82 3.82 0 001.17-2.8c0-1.1-.4-2.03-1.17-2.8a3.82 3.82 0 00-2.8-1.16c-1.1 0-2.03.38-2.8 1.16a3.82 3.82 0 00-1.16 2.8c0 1.1.38 2.03 1.16 2.8.77.78 1.7 1.17 2.8 1.17zm0-9.05c1.4 0 2.6.5 3.6 1.49a4.9 4.9 0 011.48 3.59c0 1.4-.5 2.6-1.49 3.6a4.9 4.9 0 01-3.59 1.48c-1.4 0-2.6-.5-3.6-1.49A4.9 4.9 0 014.9 9.98c0-1.4.5-2.6 1.49-3.6A4.9 4.9 0 019.98 4.9zm6.48-.2a1.19 1.19 0 01-1.21 1.17c-.32 0-.6-.1-.83-.33-.22-.23-.34-.5-.34-.83a1.19 1.19 0 011.17-1.21c.33 0 .61.12.85.36s.36.52.36.85z" fill="#666"/></svg>
+              <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"><path class="social-container__image" d="M9.98.08c1.67 0 3.03.02 4.08.06.9.04 1.7.2 2.4.47a4.98 4.98 0 012.9 2.89c.27.7.43 1.5.46 2.4.04 1.05.06 2.41.06 4.08s-.02 3.03-.06 4.08c-.03.9-.2 1.7-.46 2.4a4.99 4.99 0 01-2.9 2.9c-.7.27-1.5.43-2.4.46-1.05.04-2.41.06-4.08.06s-3.03-.02-4.08-.06a7.5 7.5 0 01-2.4-.46 4.98 4.98 0 01-2.9-2.9 7.5 7.5 0 01-.46-2.4C.1 13.01.08 11.65.08 9.98S.1 6.95.14 5.9c.04-.9.2-1.7.47-2.4A4.98 4.98 0 013.5.6 7.5 7.5 0 015.9.15C6.95.1 8.3.08 9.98.08zm0 1.29c-1.73 0-3.14.02-4.24.06-.7.02-1.35.15-1.95.37a3.59 3.59 0 00-2 1.99c-.21.6-.34 1.25-.36 1.95-.04 1.1-.06 2.5-.06 4.24 0 1.73.02 3.14.06 4.24.02.7.15 1.35.37 1.95.39.94 1.05 1.6 1.99 2 .6.22 1.25.34 1.95.37a157.6 157.6 0 008.48 0c.7-.03 1.35-.15 1.95-.38a3.59 3.59 0 002-1.99c.22-.6.34-1.25.37-1.95a157.6 157.6 0 000-8.48 6.27 6.27 0 00-.38-1.95 3.57 3.57 0 00-1.99-2 6.27 6.27 0 00-1.95-.36c-1.1-.04-2.5-.06-4.24-.06zm0 12.58c1.1 0 2.03-.4 2.8-1.17a3.82 3.82 0 001.17-2.8c0-1.1-.4-2.03-1.17-2.8a3.82 3.82 0 00-2.8-1.16c-1.1 0-2.03.38-2.8 1.16a3.82 3.82 0 00-1.16 2.8c0 1.1.38 2.03 1.16 2.8.77.78 1.7 1.17 2.8 1.17zm0-9.05c1.4 0 2.6.5 3.6 1.49a4.9 4.9 0 011.48 3.59c0 1.4-.5 2.6-1.49 3.6a4.9 4.9 0 01-3.59 1.48c-1.4 0-2.6-.5-3.6-1.49A4.9 4.9 0 014.9 9.98c0-1.4.5-2.6 1.49-3.6A4.9 4.9 0 019.98 4.9zm6.48-.2a1.19 1.19 0 01-1.21 1.17c-.32 0-.6-.1-.83-.33-.22-.23-.34-.5-.34-.83a1.19 1.19 0 011.17-1.21c.33 0 .61.12.85.36s.36.52.36.85z" fill="#666"/></svg>
               <span class="visually-hidden">instagram</span>
             </a>
           </li>
           <li class="social-container__item">
             <a href="#" class="social-container__link">
-              <svg width="22" height="22" fill="none" xmlns="http://www.w3.org/2000/svg"><path class="fb-image" d="M16.5 1.83h-2.75c-1.22 0-2.38.48-3.24 1.32a4.45 4.45 0 00-1.34 3.18v2.7H6.42v3.59h2.75v7.19h3.66v-7.2h2.75l.92-3.59h-3.67v-2.7a.9.9 0 01.92-.89h2.75v-3.6z" stroke="#666" stroke-width="1.1" stroke-linecap="round" stroke-linejoin="round"/></svg>
+              <svg width="22" height="22" fill="none" xmlns="http://www.w3.org/2000/svg"><path class="social-container__image" d="M16.5 1.83h-2.75c-1.22 0-2.38.48-3.24 1.32a4.45 4.45 0 00-1.34 3.18v2.7H6.42v3.59h2.75v7.19h3.66v-7.2h2.75l.92-3.59h-3.67v-2.7a.9.9 0 01.92-.89h2.75v-3.6z" stroke="#666" stroke-width="1.1" stroke-linecap="round" stroke-linejoin="round"/></svg>
               <span class="visually-hidden">facebook</span>
             </a>
           </li>
@@ -159,5 +157,23 @@
       </div>
     </div>
   </footer>
+  <script>
+    var navMain = document.querySelector('.main-nav');
+    var navToggle = document.querySelector('.main-nav__toggle');
+    var pageHeader = document.querySelector('.page-header');
+
+    navMain.classList.remove('main-nav--nojs');
+    pageHeader.classList.remove('page-header--nojs')
+
+    navToggle.addEventListener('click', function() {
+      if (navMain.classList.contains('main-nav--closed')) {
+        navMain.classList.remove('main-nav--closed');
+        navMain.classList.add('main-nav--opened');
+      } else {
+        navMain.classList.add('main-nav--closed');
+        navMain.classList.remove('main-nav--opened');
+      }
+    });
+  </script>
 </body>
 </html>
